stop header items from wrapping when alert message is displayed.

--- a/web/src/main/webapp/application.css
+++ b/web/src/main/webapp/application.css
@@ -37,6 +37,7 @@ body {
     font-size: 9pt;
     text-align: right;
     height: 65px;
+    width: 450px;
 }
 
 #header-right li {
